# ChangeLog for dev-python/pandas
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pandas/ChangeLog,v 1.27 2014/08/14 15:30:09 idella4 Exp $

*pandas-0.14.1 (14 Aug 2014)

  14 Aug 2014; Ian Delaney <idella4@gentoo.org> +pandas-0.14.1.ebuild,
  pandas-0.14.0.ebuild:
  bump; update dep openpyxl, fix strict-aliasing qa issue

  25 Jun 2014; Ian Delaney <idella4@gentoo.org> pandas-0.14.0.ebuild:
  set no-strict-aliasing under py2.7, revise sed statement, correct doc location
  for dohtml, fixes Bug #514870

  24 Jun 2014; Patrick Lauer <patrick@gentoo.org> pandas-0.14.0.ebuild:
  Whitespace

*pandas-0.14.0 (24 Jun 2014)

  24 Jun 2014; Ian Delaney <idella4@gentoo.org> +pandas-0.14.0.ebuild,
  pandas-0.13.1.ebuild:
  drop py2.6, update test phase

*pandas-0.13.1 (21 Feb 2014)

  21 Feb 2014; Justin Lecher <jlec@gentoo.org> +pandas-0.13.1.ebuild,
  +files/pandas-0.13.1-backport-test-fix.patch:
  Version BUmp

  22 Jan 2014; Justin Lecher <jlec@gentoo.org> pandas-0.13.0.ebuild:
  Doesn't build docs correctly with <sphinx-1.2.1, #498856

*pandas-0.13.0 (22 Jan 2014)

  22 Jan 2014; Justin Lecher <jlec@gentoo.org> +pandas-0.13.0.ebuild,
  metadata.xml:
  Version Bump, #498856

  27 Oct 2013; Michał Górny <mgorny@gentoo.org> pandas-0.12.0.ebuild:
  Remove redundant python_export_best (done by the eclass).

  20 Aug 2013; Sébastien Fabbro <bicatali@gentoo.org> -pandas-0.11.0.ebuild,
  pandas-0.12.0.ebuild:
  Removed old, fixed references to dev-python/statsmodels

  15 Aug 2013; Sébastien Fabbro <bicatali@gentoo.org> pandas-0.12.0.ebuild:
  Adjust documentation dependencies

  12 Aug 2013; Sébastien Fabbro <bicatali@gentoo.org> pandas-0.12.0.ebuild:
  Fix examples directory when both doc and examples are set

*pandas-0.12.0 (08 Aug 2013)

  08 Aug 2013; Sébastien Fabbro <bicatali@gentoo.org> +pandas-0.12.0.ebuild,
  -pandas-0.10.0.ebuild, -pandas-0.10.1.ebuild, metadata.xml:
  Version bump
