@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pandas/pandas-0.14.1.ebuild,v 1.1 2014/08/14 15:30:09 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pandas/pandas-0.14.1.ebuild,v 1.2 2014/08/15 02:45:07 idella4 Exp $
 
 EAPI=5
 
@@ -87,6 +87,7 @@ python_compile_all() {
 }
 
 python_compile() {
+	# https://github.com/pydata/pandas/issues/8033
 	if ! python_is_python3; then
 		local CFLAGS=${CFLAGS}
 		local CXXFLAGS=${CXXFLAGS}
@@ -105,6 +106,7 @@ src_test() {
 }
 
 python_test() {
+	# https://github.com/pydata/pandas/issues/8032
 	pushd  "${BUILD_DIR}"/lib > /dev/null
 	PYTHONPATH=. MPLCONFIGDIR=. HOME=. \
 		VIRTUALX_COMMAND="nosetests --verbosity=3 pandas" \
