@@ -1,15 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST google-chrome-beta_37.0.2062.68-1_amd64.deb 49404678 SHA256 3e4c4f1c43fa102165aeb253c303ead1f17a6d323fde8aeb19dc2af78108d952 SHA512 786cdf6be6f28a6aca8c1b156a5184ed0897fd0d52da21ed4676a0d4a1915c893337459887f0bd3bf872cd4ee4acb736c61b45ab126b734bb1337a3e007094e1 WHIRLPOOL f0d5bc3e010cf54459f0e0968532dfa30723bef0c97b34580ca23e8e190b68e9473ee7940a3d79884470d65acbf730960f9959b26aa1a216393e03e3fcb5d3ad
-DIST google-chrome-beta_37.0.2062.68-1_i386.deb 49674704 SHA256 cb6c4439a5720b2ea1b8b24e7cb2a7526bd3b846b9b1db2cf75c529fe54755f2 SHA512 d1bce712e29fdf8d3961ed6912539cc9b651400eb612ff86e40e43bac31beb90cdd8e167d68689940e2cc7cd144b46cdcf226c11eb77ffade824dd6b51988c42 WHIRLPOOL 0a972ee8d5e4697a619a49c258737551ee8384e7ab721fc52ab446aefaa876aa0fba25ebb82e1a1d05ad1166b6c8e11359f2af28156e49b2161f98ec28490857
-EBUILD google-chrome-beta-37.0.2062.68_p1.ebuild 4381 SHA256 c99c52c32000dd7f9d05c1c4f1adb448bdaa2787fd7126bdf2c3bcc41850fe6a SHA512 821c92aa59dc0ddffb42f03edca0e868e0ad3905a2d8f9e9b0f68ce06aab1f306a731ac35dbcb78606e5f6bfd43bb46d173f9465d38edcd2c8b0f6e050e08ed5 WHIRLPOOL 2f115ffe391e9937be2521f8a569ed469dab70c19af0992c6d50bdcee5bd16fe4ac5536c79d207d7de7b2caf2502a9d185a528c6cae428ba78980c09a1f3a26d
-MISC ChangeLog 8018 SHA256 9c143319236f36898cdb3c539ee25c8291811e9601266b555c08a0846879bfaf SHA512 d83b6c39f605de4f110201b545bf962439371bc1bf17615fcdb1340d0f8ef6a9ae669d9d366a5ec2070d810354c81bb98cee0a7949f0d98c33f2142ffeb55ad1 WHIRLPOOL 692304ce00ab6f7ef95d7e24b23757ea9c6360f862808c9b0750e72d089812dc7ed7f42d686090ef699416146181686f24a9a6edc9d71f4672bb3d36996b0b44
+DIST google-chrome-beta_37.0.2062.76-1_amd64.deb 49246588 SHA256 1df55ed3bfbff3f63a4b03952a220448bc826f4d93ec728b81616c45ff486400 SHA512 cad09d020baebcad336dc4f2400d8d7a2e8a9d0ec4524edd7b23a19b0cd110dd5417a4f64f5acf314df615d0e36424a3e98dbf344359e89fb47661cd6ab25b78 WHIRLPOOL 68657b482a4c52b63a20800192e58dfe88cfcaabd6c644cdb77943046e7a6125875b4faa72b231bcd907f30dd1c0cc743771830adfe0463f327c080279ad445f
+DIST google-chrome-beta_37.0.2062.76-1_i386.deb 49781056 SHA256 67a2eccf722dc9f57e6a2f2a66cfa2036025e72dd7ac9acfc90c3624e611d818 SHA512 305130a4cf097cd78006a8991e4b6571cf1105fbc0172bfe3edf44de003f906aab00573f2417de7aaa12b38f31ff9f30e2457a5471f72bbc117bf2f375adbb7a WHIRLPOOL ce875649212e6d4c6351519f710ae6986bc6b6eadd79c891500e53faff0b8ca545fa31e1ae8fbd86db0a56f1520f56833d466c2007c3a0b599c50c327cef5066
+EBUILD google-chrome-beta-37.0.2062.76_p1.ebuild 4381 SHA256 34ff0b05e4202e607ce45013f381e706a6e85fb86046bd5633bc452322d6d5b6 SHA512 503d3866d18b6e4e023019a0ee13a1f4d84b993d52f1dfb9796dfdd5456f4220bfcb129903fc07fcb81aa132e0adac13c5270d041927378c8c923e8225fead59 WHIRLPOOL 6e95dd6a770b51f418f860590d687a7bde94da87462d14ff1010074be30caad4e38de81119934475cc47e96745a5c89cc33a3b903bbcb342b49f7085dd154c19
+MISC ChangeLog 8231 SHA256 96eb194352865bcb0721953d5a439bc238cd76f074ca42f94cb709b5cdd7e7d1 SHA512 d46e104d28122b11b50bede5105c4e148c5c0fdc108661979238c867e6195e5c793174726feff23feec897e687197a5a547009893c16045b0e7d21efc35185f0 WHIRLPOOL 2486117e84a704d551b6589d0d6fc7f4deff28030ff28a0f0488aab1ff55b6dec1264683496f49f48f2d5bbad1feadd23127c9c768229492b59e865f7de652a2
 MISC metadata.xml 600 SHA256 e3dffcb8db012d64e4dbb7df2566b800b2a9476aaf0447b1d40a6e94d2733806 SHA512 350bb629bee41ac320d1a870d3d7f34ead23edb1b7cf6ac6379363b01435015c58e249ba1375e9ed3b3023107ef5f3f29f646143a9e2622769923aa5fb21d846 WHIRLPOOL 05772be4e662813e5a0231e46d272931f0ccce9a13f7244ddda8a40e43e8d141293d0a70d4aa8b640ace773d3f68d663bd8cd4558f3bc3c65e5126834bf05129
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlPivncACgkQC77qH+pIQ6SZzgEAt+n8+HM3l6bYyJZh6JuNZGYg
-1fm2z54NyFrmNzp4bAkA/iTfqKU7CQIXxqnwDHUbTELuCE1C5wwwdDGIXd4Xf12T
-=jxYI
+iF4EAREIAAYFAlPtbAYACgkQC77qH+pIQ6TmRAD/arfhhLpSgXBdze3sW8g0bQXF
+87BScdEc7TYqHSVF8/kBAICn4tu3F7koOUQF5NmETwnWacbu8zvdhLwH5CXz73Bx
+=np27
 -----END PGP SIGNATURE-----
