@@ -1,22 +1,22 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST google-chrome-beta_37.0.2062.68-1_amd64.deb 49404678 SHA256 3e4c4f1c43fa102165aeb253c303ead1f17a6d323fde8aeb19dc2af78108d952 SHA512 786cdf6be6f28a6aca8c1b156a5184ed0897fd0d52da21ed4676a0d4a1915c893337459887f0bd3bf872cd4ee4acb736c61b45ab126b734bb1337a3e007094e1 WHIRLPOOL f0d5bc3e010cf54459f0e0968532dfa30723bef0c97b34580ca23e8e190b68e9473ee7940a3d79884470d65acbf730960f9959b26aa1a216393e03e3fcb5d3ad
-DIST google-chrome-beta_37.0.2062.68-1_i386.deb 49674704 SHA256 cb6c4439a5720b2ea1b8b24e7cb2a7526bd3b846b9b1db2cf75c529fe54755f2 SHA512 d1bce712e29fdf8d3961ed6912539cc9b651400eb612ff86e40e43bac31beb90cdd8e167d68689940e2cc7cd144b46cdcf226c11eb77ffade824dd6b51988c42 WHIRLPOOL 0a972ee8d5e4697a619a49c258737551ee8384e7ab721fc52ab446aefaa876aa0fba25ebb82e1a1d05ad1166b6c8e11359f2af28156e49b2161f98ec28490857
+DIST google-chrome-beta_37.0.2062.76-1_amd64.deb 49246588 SHA256 1df55ed3bfbff3f63a4b03952a220448bc826f4d93ec728b81616c45ff486400 SHA512 cad09d020baebcad336dc4f2400d8d7a2e8a9d0ec4524edd7b23a19b0cd110dd5417a4f64f5acf314df615d0e36424a3e98dbf344359e89fb47661cd6ab25b78 WHIRLPOOL 68657b482a4c52b63a20800192e58dfe88cfcaabd6c644cdb77943046e7a6125875b4faa72b231bcd907f30dd1c0cc743771830adfe0463f327c080279ad445f
+DIST google-chrome-beta_37.0.2062.76-1_i386.deb 49781056 SHA256 67a2eccf722dc9f57e6a2f2a66cfa2036025e72dd7ac9acfc90c3624e611d818 SHA512 305130a4cf097cd78006a8991e4b6571cf1105fbc0172bfe3edf44de003f906aab00573f2417de7aaa12b38f31ff9f30e2457a5471f72bbc117bf2f375adbb7a WHIRLPOOL ce875649212e6d4c6351519f710ae6986bc6b6eadd79c891500e53faff0b8ca545fa31e1ae8fbd86db0a56f1520f56833d466c2007c3a0b599c50c327cef5066
 DIST google-chrome-stable_36.0.1985.143-1_amd64.deb 48424346 SHA256 48ff9f794d9c347e96c76ae59f5337c7a8d8aed0ffc964909b94890c4a44bfa7 SHA512 7a5159155e1b15fd02b944d79a8396ad0992629e9c80104cbbd9986ea6008868a238b96db1c0b5a9043e6a8794e2693186afc2de02233b5798137f9dc2ef9a0e WHIRLPOOL 791427849e6419f1e58dbe47398f00b51d161ff6f5a55c944d80541e37dd18d2e05455326e2a01eee638f3bb683dfc842ce16012deb54970af4be4012ea3af92
 DIST google-chrome-stable_36.0.1985.143-1_i386.deb 48796954 SHA256 843d10f93807e366abcc54f06758731a2fb5736b6711a4e221d48933d18e2fe3 SHA512 c523984bc316394c0d2630e2676656fd647ee6a6527e75a5bce15ca8ca1b4fc7045053daf1b6d570050316a153a11464dbb99315a167f0869291806dba30be7a WHIRLPOOL 51d02fabbf38a3a113d750e4ce5983bd701bbb624791c3459be2211fbe02979a44b1724576a037c261764904241d814c986272aa449a6ce7b76b9034d6f40df7
 DIST google-chrome-unstable_38.0.2121.3-1_amd64.deb 47933026 SHA256 7bb194c9fd887e68cf9d4db7439fb64028441c26f58ef7c39374ab0723d3a370 SHA512 8b310d8c63a3f965361d912cabd38a650e71ebb349eb05f67764dbb7b8dd538cd65b4abde8a4b12fd0eb407abcf13fa718c1038d004746039420f1118eecda0e WHIRLPOOL 9c89de1e57757355b96e550e2577914a4eaf888a285a94596b2b69100f1879516d9c16475709ee56233ea0256e9967dd3f32b2bb3317561b32f591c436bc42a8
 DIST google-chrome-unstable_38.0.2121.3-1_i386.deb 47316418 SHA256 16e740c0b1e33e1d2e9ea254c157fd086d1dc9a40672766a7b87ccb6219f6eb4 SHA512 274f2a6918f4d8a2aabccb177948f4052e71b142d5c9a27cf46fc35e556a1e39c1b7378b4714aa413bba8d64801b7d6143971cb8e409b2b994d70a8792e109aa WHIRLPOOL fd6514e3bdd6ad8a8d0e2aac0feeaf95575a29542180abf87d7fc9efd33953b115e66cfa6b031313bde55d813fdd0f725ecf4070febeccce0804c2cb2c0dea0b
 EBUILD chrome-binary-plugins-36.0.1985.143_p1.ebuild 1942 SHA256 9d7e0a544621c80f7a14e1e6aa5bdfe071a4f3d92f2ddbe784f65c51fce7de8a SHA512 765b3bb2cc42d7db4028c87c650905a14f530d88181a2e74a0e90bd4e15e11e17f6e3a9d04f92677895092c21939cf0d02f6507485bd40fae04325a78a401ce1 WHIRLPOOL bd478441f38b1bcc74f8acbce3ecdfc967b75ab39f5531c7744b5719c028ff8c7a03c3d90c0124cbb24e9c266e064688494d46c4f52c8731043c13c5256ce8aa
-EBUILD chrome-binary-plugins-37.0.2062.68_beta1.ebuild 1918 SHA256 f5dc65827e7178f93854d6dd2bebff7f81526c39b8355d1d8bd1b372c8ef4be4 SHA512 7a33f92f2d39d1121bcd0f7d90fcb0955c1942f0b3998460d63ea9380b92fa4f0a97ff25ec78c7a5ece62e34c1043a5aced9f943ff0caa215606da71c432dca8 WHIRLPOOL f781fc017aca97036f1684ba81c6864dd43e63b04b0200abf31d18e3a436aa5f00ce00a3255cf087a16ef0b05b12f03f6fbb3fff84455da995dfeec5cce97d25
+EBUILD chrome-binary-plugins-37.0.2062.76_beta1.ebuild 1918 SHA256 89f904118d5760c07f782b1cbce57a1739d1310a8e969d87f209b0a8a2825050 SHA512 f7e2ab335554e4abe8592928647c81177201d4e27d7eb56233b78a9512073c27bb5458e0d3ef4be66516cd4d921082639920c5be9d54d144ce0e5576e109af96 WHIRLPOOL 1982421af42921100e189082e6ec1a9b4a0f1bc564326517dc9c0e0271d44d7318aa07b5518b604683cbb3ebf77973c1621617a268b2b34c5c3550b7dfc49849
 EBUILD chrome-binary-plugins-38.0.2121.3_alpha1.ebuild 1918 SHA256 bdb8930bd34e5cb5e83a436bdd88cdb0f7b40599f89ccdf38855750a92d66e97 SHA512 d3a2c897ba2bac9a2b00d2c6f8617e6fa08b76bcb4dac3543f41e1cae03008434b43a9a3e647245027ffa9499be463baa4271b9e984f8da6967786f042c44b89 WHIRLPOOL cda7dfd518633c7551a0464e2693e7d027cbc664dbb9f2d0da48079ff3504ecd85640cbc0ff42b20086538b19109072542b7a600ec50d7165a16e2c3bfed612a
 EBUILD chrome-binary-plugins-9999.ebuild 1854 SHA256 91cd05b8aa8b0ef6370a0257eba4e628bb34e9fd14994cbf945b4f49bcf7db41 SHA512 46155849c7869673d452f499a9556b12e2395cfa5659d44e8eb389a9ea79ae07eabe003cb31538218e407f9dafbb0d7b1555ab6cb1532b5e950e4eaaecaacb0b WHIRLPOOL af348ef6ddc419767d94a394cbc6de23eac215140eeb4073d00ecab2c66d416d17d1cebb317a2fba9526a80bda7f73f26081f9f7dd5b7a5473ce2c6264356549
-MISC ChangeLog 46364 SHA256 f9171d97350abf2db2c60dab8137940fd283046521564ced2ab95bb7890567df SHA512 2f48456b97adf2dd36f32e96c50445c282a24b06003981138ed0f911a34f2d8e6fb8f1790b9eba2b155f8485e7f8849fd03f2f52758746556faacb4d81c288d4 WHIRLPOOL b4e07ef8b07a731a37217d9897b2f611737da3257e6b0bbe85e92ca09a64560cb9b2051277466d52a2d84834ef43b1d106c44d0da1229f5084e7af21ff4ac238
+MISC ChangeLog 46595 SHA256 f075f08b5a634f39ce36323a223ec401e0e448af5a3730e4906498844bcaf667 SHA512 a2fa1945c0dd78064858374cc62dfa84fff489284d7fb58fea43206ffe51fa404f956b9071d59e57a539c1c34092af0795182059dd62959148abeba9927d5834 WHIRLPOOL f9df3fb83582c025cc64233cb6ea3a3116856f7c827daf628f59103bd913569b5b9a13566751b453c567d8a419bf5a1c7769b220006715e783d9908946c0c71c
 MISC metadata.xml 409 SHA256 d40d69b26dd8aefe8da69937e54e0a885d6867e28e42c5dcbe193233a84ee533 SHA512 bdf4f11c173af9f80b3475f8ea32ba966806d1e0e694bd55a6a4960717e3f3ffff69eabb060ae5ee4d3b39cdf18eeeff45c9d431c3b6ce8ae5c271c7a409aa71 WHIRLPOOL 7319320d648a8aae0eec726a8ab489bb71fe5f93dfb40847e97344a02be85a09ba931d5aeee8fdb13d899de3c90746c75a59897287c715dd771dfbe8863b803b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlPq0y8ACgkQC77qH+pIQ6RPbgEAi1ebpMRfkTmT3tY9phORH+N3
-FBAJvx6GOzcZMflA9L4BAIlVd+0RCUW5zr/nNHme+diZZm7TJSJsGdYA13iaZvZ9
-=V1bB
+iF4EAREIAAYFAlPta/cACgkQC77qH+pIQ6R7hQEAg3mNinan2bq1o1lr5NHmaNcE
+ellENl7LDxo7ExVYWIIA/iV4/Cx2G77a69izgsl9j0cMRUB2cgSpFmyVL4yIEsCi
+=QSny
 -----END PGP SIGNATURE-----
