@@ -1,6 +1,13 @@
 # ChangeLog for www-client/google-chrome-beta
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome-beta/ChangeLog,v 1.39 2014/08/06 23:47:02 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome-beta/ChangeLog,v 1.40 2014/08/15 02:10:13 floppym Exp $
+
+*google-chrome-beta-37.0.2062.76_p1 (15 Aug 2014)
+
+  15 Aug 2014; Mike Gilbert <floppym@gentoo.org>
+  +google-chrome-beta-37.0.2062.76_p1.ebuild,
+  -google-chrome-beta-37.0.2062.68_p1.ebuild:
+  Automated update.
 
 *google-chrome-beta-37.0.2062.68_p1 (06 Aug 2014)
 
