@@ -1,6 +1,13 @@
 # ChangeLog for www-plugins/chrome-binary-plugins
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-plugins/chrome-binary-plugins/ChangeLog,v 1.165 2014/08/13 02:53:25 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-plugins/chrome-binary-plugins/ChangeLog,v 1.166 2014/08/15 02:09:55 floppym Exp $
+
+*chrome-binary-plugins-37.0.2062.76_beta1 (15 Aug 2014)
+
+  15 Aug 2014; Mike Gilbert <floppym@gentoo.org>
+  +chrome-binary-plugins-37.0.2062.76_beta1.ebuild,
+  -chrome-binary-plugins-37.0.2062.68_beta1.ebuild:
+  Automated update.
 
 *chrome-binary-plugins-38.0.2121.3_alpha1 (13 Aug 2014)
 *chrome-binary-plugins-36.0.1985.143_p1 (13 Aug 2014)
